tests/typechecking/invalid/array_size_not_int.ml
let a = Array.create 2. 3. in
()
